# django-root-secret

./: .gitignore  LICENSE  README.md  django_root_secret_test_settings.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
django_root_secret/: apps.py  crypto.py  env.py  secrets.py  tests.py
django_root_secret/management/commands/: encrypt_secret.py  generate_root_encryption_key.py
